# advanced-cpp1

./: .gitignore  CMakeLists.txt
include/afina/allocator/: Pointer.h  Simple.h
src/: Version.cpp  afina
src/allocator/: Pointer.cpp  Simple.cpp
src/storage/: MapBasedGlobalLockImpl.cpp  MapBasedGlobalLockImpl.h
